--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <footer>
-      <h3>If you have time, you can <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">read Wikipedia entry. </a></h3>
+      <h3>If you have time, you can <a id="tribute-link" href="https://www.youtube.com/watch?v=LGpPiFr6d8k" target="_blank">read. </a></h3>
       </footer>
 
     
