I'm playing with with to get use to de comands

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <!--Luis David-->
       <article id="tribute-info">
-        <h2>Dr. Borlaug's life:</h2>
+        <h2>Luis David Life! and the doctor life xD:</h2>
       
         <section>
         <ul>
@@ -41,7 +41,8 @@
 
 
     <footer>
-      <h3>If you have time, you can <a id="tribute-link" href="https://www.youtube.com/watch?v=LGpPiFr6d8k" target="_blank">read. </a></h3>
+      <h3>Whoooouuu i'm changing through Git to my youtube chanel! <a id="tribute-link" href="https://www.youtube.com/watch?v=LGpPiFr6d8k" target="_blank">Look at me now!!! </a></h3>
+      <!--I found in wikipedia the name of the doctor Dr. Norman Borlaug https://en.wikipedia.org/wiki/Norman_Borlaug-->
       </footer>
 
     
