I notice that I included information in spanish in the first 2 list, I've made the traductions jaja sorry. I think it is all.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       
         <section class="important-years">
         <ul>
-          <li><strong>1995</strong> - La historia de Google comienza en 1995 en la Universidad de Stanford. </li><br>
+          <li><strong>1995</strong> - The google Story starts, in the Stanford Stanford University. </li><br>
           <br>
-          <li><strong>1998</strong> - En agosto de 1998, el cofundador de Sun, Andy Bechtolsheim, les dio a Larry y Sergey un cheque por USD 100,000 and more over The “Google.com” domain name is registered, and a new search engine joins the internet.</li><br>         
+          <li><strong>1998</strong> - In Agoust, the Sun Co-funder, Andy Bechtolsheim, gives to Larry and Sergey a check for USD 100,000 and more over The “Google.com” domain name is registered, and a new search engine joins the internet.</li><br>         
           <br>
           <li><strong>2000</strong> - The search engine is made available in 10 new languages (German, Danish, Spanish, Finnish, French, Italian, Dutch, Norwegian, Portuguese and Swedish).</li>
           <br>
